# redirecter

./: .gitignore  Makefile  README.md  dev.py  main.py  pyproject.toml
src/: routes.py
